# ngram-matcher

./: .gitignore  README.md  base_corpus.py  chapter_corpus.py  chapter_model.py  document_model.py  ebl_enums.py  fragment_corpus.py  fragment_model.py  helper.py  pyproject.toml  requirements.txt  util.py
src/ebl_ngrams/: __init__.py  base_corpus.py  chapter_corpus.py  chapter_model.py  document_model.py  fragment_corpus.py  fragment_model.py  metrics.py
src/ebl_ngrams/enums/: manuscript_type.py  period.py  provenance.py  stage.py
src/ebl_ngrams/test/: test_corpus_model.py  test_document_model.py  test_support.py
test/: test_document_model.py
tests/: test_corpus_model.py  test_document_model.py
